add and fix block textures, add client side transparency to block

--- a/build.gradle
+++ b/build.gradle
@@ -75,12 +75,12 @@ dependencies {
     minecraft "net.minecraftforge:forge:${mc_version}-31.2.30"
 
     //jei
-    //compileOnly fg.deobf("mezz.jei:jei-1.15.2:6.0.0.2:api")
-    //runtimeOnly fg.deobf("mezz.jei:jei-1.15.2:6.0.0.2")
+    compileOnly fg.deobf("mezz.jei:jei-1.15.2:6.0.0.2:api")
+    runtimeOnly fg.deobf("mezz.jei:jei-1.15.2:6.0.0.2")
 
     //patchouli
-    //compileOnly fg.deobf("vazkii.patchouli:Patchouli:1.15.2-1.2-35.2:api")
-    //runtimeOnly fg.deobf("vazkii.patchouli:Patchouli:1.15.2-1.2-35.2")
+    compileOnly fg.deobf("vazkii.patchouli:Patchouli:1.15.2-1.2-35.2:api")
+    runtimeOnly fg.deobf("vazkii.patchouli:Patchouli:1.15.2-1.2-35.2")
 }
 
 // Example for how to get properties into the manifest for reading by the runtime..
